--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Geo Quest",
   "short_name": "GeoQuest",
   "description": "Test your knowledge of country flags around the world",
-  "start_url": "/index.html",
+  "start_url": "/geo-quest/index.html",
   "display": "standalone",
   "background_color": "#f5f5f5",
   "theme_color": "#4285f4",
